--- a/style.css
+++ b/style.css
@@ -25,6 +25,9 @@ h3,h4, p {
   cursor: pointer;
   box-shadow: 10px 8px 0px -5px rgba(0,0,0,1);
   transform: scale(0.985);
+ #title {
+  color: #f4d04e;
+  }
  
 }
 #img {
